--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/head') %>
-<%- include('./partials/header') %>
+<%- include('./partials/headerLogueado') %>
 
 <div class="container products-wrapper">
 	<div class="row">
