--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/head') %>
-<%- include('./partials/header') %>
+<%- include('./partials/headerLogueado') %>
 
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
