--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 					<h1 class="main-title">Nombre del usuario 
-						<a href="profile-edit.html">
+						<a href="/usuario/profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
@@ -36,7 +36,7 @@
 			<!-- Show mis productos -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -50,7 +50,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -65,7 +65,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -95,7 +95,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -125,7 +125,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -140,7 +140,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/producto">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
