--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/inter-dragon.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -32,7 +32,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/arsenal.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -47,7 +47,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/barca.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -62,7 +62,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/rm.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -87,7 +87,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/man-city.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -101,7 +101,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/man-utd.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -115,7 +115,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/roma.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
@@ -129,7 +129,7 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/casla.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
