--- a/views/product.ejs
+++ b/views/product.ejs
@@ -3,7 +3,7 @@
 	
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">San Lorenzo 2021</h2> 
 			<p class="product-detail-description">
 				<a href="/producto/add">Editar</a>
 			</p>
@@ -11,11 +11,9 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="./images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="./images/products/casla.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						Camiseta De San Lorenzo De Almagro 21/22</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
