index terminado, cambios en footer y en header logueado

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,9 +21,9 @@
 							<img src="images/products/inter-dragon.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Inter Dragon 2009</h2>
+							<p>Camiseta del inter de milan 09/10</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -35,10 +35,9 @@
 							<img src="images/products/arsenal.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Arenal 2005</h2>
+							<p>Camiseta Arsenal 05/06</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -50,10 +49,9 @@
 							<img src="images/products/barca.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Barca 2024</h2>
+							<p>Camiseta Barcelona 23/24</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -65,10 +63,9 @@
 							<img src="images/products/rm.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Real Madrid 2017</h2>
+							<p>Camiseta Real Madrid 17/18</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -90,9 +87,9 @@
 							<img src="images/products/man-city.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Man City 2024</h2>
+							<p>Camiseta Manchester City 23/24</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -104,9 +101,9 @@
 							<img src="images/products/man-utd.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Man Utd 2024</h2>
+							<p>Camiseta Manchester United 23/24</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -118,9 +115,9 @@
 							<img src="images/products/roma.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>Roma 2024</h2>
+							<p>Camiseta de la roma 23/24</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
@@ -132,9 +129,9 @@
 							<img src="images/products/casla.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2>San Lorenzo 2021</h2>
+							<p>Camiseta de San Lorenzo De Almagro 21/22</p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
