--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
             <div class="col-12 col-md-4">
                 <a class="main-header_credit-link">
                     <i class="fas fa-hand-holding-usd"></i>
-                    Todas las opiniones en un solo lugar.
+                    Todas las camisetas en un solo lugar.
                 </a>
             </div>
         </div>
@@ -28,7 +28,7 @@
 
         <nav class="main-navbar">
             <ul class="left-navbar">
-                <li><a href="#">Todos los productos</a></li>
+                <li><a href="/">Todos los productos</a></li>
                 <!-- solo logueado <li><a href="">Cargar productos</a></li> -->
             </ul>
 
