--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -21,7 +21,7 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="../" class="main-header_home-link">
-						<img src="./images/logo-mercado-liebre.svg">
+						<img src="/images/pcvshirts.png">
 					</a>
 				</div>
 	
@@ -35,7 +35,7 @@
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
+						Todas las camisetsas en un solo lugar.
 					</a>
 				</div>
 			</div>
@@ -51,16 +51,13 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="profile.html">
+					<li><a href="/usuario/profile">
 							Nombre del usuario <i class="fas fa-user"></i>
 						</a>
 					</li>
-					<li>
-						<form action="" method="post">
-							<button class="logout" type="submit">
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-							</button>
-						</form>
+					<li><a href="/">
+						Cerrar sesion <i class="fas fa-sign-in-alt"></i>
+						</a>	
 					</li>
 					<!-- Solo deslogueado <li>
 						<a href="register.html">Creá tu cuenta <i class="far fa-address-card"></i>
