--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,17 @@
 			<h2 class="products-title">Ingresar</h2>
 		</div>
 		<!-- Show the "ultimos" products -->
-		<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+		<h2 class="col-12"> 
+			<form class="form-login" action="" method="get">
+				<label for="email">Usuario:</label>
+				<input type="email" placeholder="pcv@udesa.edu.ar" required><br><br>
+				<label for="pass">Contraseña:</label>
+				<input type="password" placeholder="*******" required><br><br>
+				<label for="recordar">Recordame:</label>
+				<input type="checkbox"  required><br><br>
+				<button type="submit" >Enviar</button>
+
+			</form>
 		</h2>
 
 <%- include('./partials/footer') %>
