Agarrando info de la db

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -22,7 +22,7 @@
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
-								</p>
+								<%= data[0].comentarios[0].texto %></p>
 								
 									
 								
@@ -33,7 +33,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<%= data[0].comentarios[1].texto %></p>
 							</div>
 						</article>
 						<article>
@@ -41,7 +41,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<%= data[0].comentarios[2].texto %>
 									</p>
 							</div>
 						</article>
