--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,11 +4,11 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+				<img src="<%= fotoDePerfil %>" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">mativb 
+					<h1 class="main-title"><%= nombreDeUsuario %>
 						<a href="/usuario/profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
@@ -142,12 +142,11 @@
 				<section class="product-box">
 					<a href="/producto">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%=data[0].imagen %>" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2><%= data[0].nombre %></h2>
+							<p><%= data[0].descripcion %></p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
