--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -35,7 +35,7 @@
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						<i class="fas fa-hand-holding-usd"></i>
-						Todas las camisetsas en un solo lugar.
+						Todas las camisetas en un solo lugar.
 					</a>
 				</div>
 			</div>
@@ -52,7 +52,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/usuario/profile">
-							Nombre del usuario <i class="fas fa-user"></i>
+						<%= nombreDeUsuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li><a href="/">
