--- a/views/product.ejs
+++ b/views/product.ejs
@@ -18,10 +18,10 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%= user[3].fotoPerfil %>" alt="">
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
+								<strong> <a href="/usuario/profile"><%= user[3].usuario %></a> </strong>
 								<%= data[0].comentarios[0].texto %></p>
 								
 									
@@ -29,39 +29,23 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%= user[2].fotoPerfil %>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
+									<strong> <a href="/usuario/profile"><%= user[2].usuario %></a> </strong>
 									<%= data[0].comentarios[1].texto %></p>
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%= user[1].fotoPerfil %>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
+									<strong> <a href="/usuario/profile"><%= user[1].usuario %></a> </strong>
 									<%= data[0].comentarios[2].texto %>
 									</p>
 							</div>
 						</article>
-						<article>
-							<img src="https://via.placeholder.com/35" alt="">
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
-							</div>
-						</article>
-						<article>
-							<img src="https://via.placeholder.com/35" alt="">
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/usuario/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-							</div>
-						</article>
+						
 
 					</section>
 					<form class="form" action="" method="get">
