--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -1,17 +1,29 @@
 <%- include('./partials/head') %>
 <%- include('./partials/headerLogueado') %>
 
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Editar mi perfil</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de edición de datos del perfil de usuario. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos deñ usuario<br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
-			</h2>
+<div class="container products-wrapper">
+	<div class="row">
+		<div class="col-12">
+			<h2 class="products-title">Edita tu perfil</h2>
+		</div>
+		<!-- Show the "ultimos" products -->
+		<h2 class="col-12"> 
+			<form class="form-register" action="" method="get">
+			<label for="email">Email:</label>
+			<input type="email" placeholder="pcv@udesa.edu.ar" required><br><br>
+			<label for="user">Usuario:</label>
+			<input type="text" placeholder="PCVcamisetas" required><br><br>
+			<label for="pass">Contraseña:</label>
+			<input type="password" placeholder="*******" required><br><br>
+			<label for="fecha-nacimiento">Fecha De Nacimiento:</label>
+			<input type="date" required><br><br>
+			<label for="documento">Documento:</label>
+			<input type="number" placeholder="46649856" required><br><br>
+			<label for="fotoPerfil">Foto de Perfil:</label>
+			<input type="text" placeholder="Ingresar archivo .jpg" required><br><br>
+			<button type="submit" >Enviar</button>
+
+		</form>
+		</h2>
 
 <%- include('./partials/footer') %>
