--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,19 +8,19 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
-				<form class="form-register" action="" method="get">
+				<form class="form-register" action="/usuario/store" method="post">
 				<label for="email">Email:</label>
-				<input type="email" placeholder="pcv@udesa.edu.ar" required><br><br>
+				<input type="email" placeholder="pcv@udesa.edu.ar"  name="email"><br><br>
 				<label for="user">Usuario:</label>
-				<input type="text" placeholder="PCVcamisetas" required><br><br>
+				<input type="text" placeholder="PCVcamisetas"name= "usuario" ><br><br>
 				<label for="pass">Contraseña:</label>
-				<input type="password" placeholder="*******" required><br><br>
+				<input type="password" placeholder="*******" name = "contrasena"><br><br>
 				<label for="fecha-nacimiento">Fecha De Nacimiento:</label>
-				<input type="date" required><br><br>
+				<input type="date" name="fecha" ><br><br>
 				<label for="documento">Documento:</label>
-				<input type="number" placeholder="46649856" required><br><br>
+				<input type="number" placeholder="46649856" name="dni"><br><br>
 				<label for="fotoPerfil">Foto de Perfil:</label>
-				<input type="text" placeholder="Ingresar archivo .jpg" required><br><br>
+				<input type="text" placeholder="Ingresar archivo .jpg"name= "fotodeperfil" ><br><br>
 				<button type="submit" >Enviar</button>
 
 			</form>
