--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -1,16 +1,33 @@
 <%- include('./partials/head') %>
 <%- include('./partials/header') %>
 
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Resultados de búsqueda</h2>
+
+<div class="container products-wrapper">
+	<div class="row">
+	  <% if (productos.length > 0) { %><div class="col-12">
+		<h2 class="products-title">Resultados de búsqueda para: "<%= query %>"</h2>
+	</div>
+		 
+		<% for (let i = 0; i < productos.length; i++) { %>
+			<div>
+				<section>
+					<a href="/producto">
+						<figure class="product-box_image">
+							<img src="<%= productos[i].imagen_producto %>">
+						</figure>
+						<article class="product-box_data">
+							<h2><%= productos[i].producto %></h2>
+							<p><%= productos[i].descripcion %></p>
+						</article>
+					</a>
+				</section>
 			</div>
-			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
-			</h2>
+			<% } %>
+			<% } else { %>
+			  <div class="col-12">
+				<h2 class="products-title">No se encontraron productos que coincidan con el termino: "<%= query %>".</h2>
+			  </div>
+			<% } %>
 
 <%- include('./partials/footer') %>
 
