--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 		<!-- Show the "ultimos" products -->
 		<h2 class="col-12"> 
 			<form class="form-login" action="/usuario/login" method="post">
-				<input type="email" placeholder="Email" required><br><br>
+				<input type="email" name="email" id="email" placeholder="Email" required><br><br>
 				<input type="password" placeholder="Password" required><br><br>
 				<input type="checkbox"  required><br><br>
 				<label for="recordarme">Recordame:</label>
