--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,9 @@
 		<h2 class="col-12"> 
 			<form class="form-login" action="/usuario/login" method="post">
 				<input type="email" name="email" id="email" placeholder="Email" required><br><br>
-				<input type="password" placeholder="Password" required><br><br>
-				<input type="checkbox"  required><br><br>
+				<input type="password" name="contrasena" placeholder="Password" required><br><br>
 				<label for="recordarme">Recordame:</label>
+				<input type="checkbox"  name="recordarme" required><br><br>
 				<button type="submit" >Enviar</button>
 
 			</form>
