--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -52,7 +52,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/usuario/profile">
-						<%= nombreDeUsuario %> <i class="fas fa-user"></i>
+						<%= //nombreDeUsuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li><a href="/">
