--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,18 @@
 <%- include('./partials/head') %>
-<%- include('./partials/header') %>
 	
+
+	<% if (cookies.usuarioLogueado !== undefined || locals.userSession !== undefined) { %>
+		<%- include('./partials/headerLogueado') %>
+	<% } else { %>
+		<%- include('./partials/header') %>
+	<% } %>
+
 	<!-- Banner -->
 	<div class="banner">
 		<img src="images/img-home-banner.jpg" alt="Banner de ofertas">
 	</div>
 	<!-- /Banner -->
-
+	
 	<!-- Novedades -->
 	<div class="container products-wrapper">
 		<div class="row">
