--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -55,9 +55,9 @@
 						<%= //nombreDeUsuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
-					<li><a href="/">
-						Cerrar sesion <i class="fas fa-sign-in-alt"></i>
-						</a>	
+					<li><form action="/usuario/logout" method="post">
+						<button type="submit">Cerrar sesion<i class="fas fa-sign-in-alt"></i></button>
+					</form>	
 					</li>
 					<!-- Solo deslogueado <li>
 						<a href="register.html">Creá tu cuenta <i class="far fa-address-card"></i>
