--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,12 @@
 	<div class="row">
 		<div class="col-12">
 			<h2 class="products-title">Ingresar</h2>
+			<% if (locals.errors){
+				errors.forEach(error => {	%>
+					<p> <%= error.msg %> </p> 
+				<%}) %>
+				 
+			<%	} %>
 		</div>
 		<!-- Show the "ultimos" products -->
 		<h2 class="col-12"> 
