--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
 				</div>
 				<div>
 					<ul class="">
-						<li><%= email %></li>
+						<li><%= info.email %></li>
 						<li>8 productos</li>
 						<li>200 seguidores</li>
 						<li>300 comentarios</li>
