cambios en tablas sql y modelos

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,9 @@
 <%- include('./partials/head') %>
-<%- include('./partials/headerLogueado') %>
+<% if (cookies.usuarioLogueado !== undefined || locals.userSession !== undefined) { %>
+	<%- include('./partials/headerLogueado') %>
+<% } else { %>
+	<%- include('./partials/header') %>
+<% } %>
 
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
