--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -20,7 +20,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
-					<a href="../" class="main-header_home-link">
+					<a href="http://localhost:3000" class="main-header_home-link">
 						<img src="/images/pcvshirts.png">
 					</a>
 				</div>
@@ -46,13 +46,13 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="../">Todos los productos</a></li>
+					<li><a href="http://localhost:3000">Todos los productos</a></li>
 					<li><a href="/producto/add">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/usuario/profile">
-						<%= //nombreDeUsuario %> <i class="fas fa-user"></i>
+					<li><a href="/usuario/profile/<%= locals.cookies.usuarioLogueado.id %>">
+						<%= locals.cookies.usuarioLogueado.usuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li><form action="/usuario/logout" method="post">
