--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 				<% if (index < 4) { %>
 					<div class="col-12 col-md-6 col-lg-3 ">
 						<section class="product-box">
-							<a href="/producto">
+							<a href="producto/<%= product.id %>">
 								<figure class="product-box_image">
 								<img src="/images/products/<%= product.imagen_producto %>" alt="<%= product.producto %>" class="product-img">
 								</figure>
