--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -13,11 +13,11 @@
 	</div>
 		 
 		<% for (let i = 0; i < productos.length; i++) { %>
-			<div>
-				<section>
-					<a href="/producto">
+			<div class="col-12 col-md-6 col-lg-3 ">
+				<section class="product-box">
+					<a href="/producto/<%= productos[i].id %>">
 						<figure class="product-box_image">
-							<img src="<%= productos[i].imagen_producto %>">
+							<img src="/images/products/<%= productos[i].imagen_producto %>">
 						</figure>
 						<article class="product-box_data">
 							<h2><%= productos[i].producto %></h2>
