index terminado, comienzo de edit product

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,7 +14,7 @@
 			<% }%>
 			<p class="product-detail-description">
 					
-				<a href="/producto/add">Editar</a>
+				<a href="http://localhost:3000/producto/editProduct/<%= producto.id %>/<%producto.id_user%>">Editar</a>
 			</p>
 		</div>
 		<div class="product-detail">
