--- a/views/product-edit.ejs
+++ b/views/product-edit.ejs
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
 <%- include('./partials/head') %>
-<body>
-    <%- include('./partials/headerLogueado') %>
-
+<% if (cookies.usuarioLogueado !== undefined || locals.userSession !== undefined) { %>
+	<%- include('./partials/headerLogueado') %>
+<% } else { %>
+	<%- include('./partials/header') %>
+<% } %>
     <div class="container products-wrapper">
         <div class="row">
             <div class="col-12">
@@ -15,7 +15,7 @@
                 <% }) %>
             <% } %>
 
-            <form action="/producto/editProduct/<%=producto.id%>" method="POST" id="registro-form"> 
+            <form action="/producto/editedProduct/<%=producto.id%>" method="POST" id="registro-form"> 
                 <div id="separador">
                 <label for="Imagen">Imagen del producto:</label>
                 <input type="text" id="imagen_producto" name="imagen_producto" class="form-input" value="default.jpg"><br>
@@ -44,8 +44,5 @@
 
 
     <!-- footer -->
-    <%- include ('./partials/footer') %>
+    <%- include('./partials/footer') %>	
     <!-- /footer -->
-</body>
-
-</html>
