--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -8,19 +8,17 @@
 		</div>
 		<!-- Show the "ultimos" products -->
 		<h2 class="col-12"> 
-			<form class="form-register" action="" method="get">
+			<form class="form-register" method="post">
 			<label for="email">Email:</label>
-			<input type="email" placeholder="pcv@udesa.edu.ar" required><br><br>
+			<input type="email" placeholder="pcv@udesa.edu.ar" name="email" required><br><br>
 			<label for="user">Usuario:</label>
-			<input type="text" placeholder="PCVcamisetas" required><br><br>
+			<input type="text" placeholder="PCVcamisetas" name="usuario" required><br><br>
 			<label for="pass">Contraseña:</label>
-			<input type="password" placeholder="*******" required><br><br>
+			<input type="password" placeholder="*******" name="contrasena" required><br><br>
 			<label for="fecha-nacimiento">Fecha De Nacimiento:</label>
-			<input type="date" required><br><br>
+			<input type="date" name="fecha"required><br><br>
 			<label for="documento">Documento:</label>
-			<input type="number" placeholder="46649856" required><br><br>
-			<label for="fotoPerfil">Foto de Perfil:</label>
-			<input type="text" placeholder="Ingresar archivo .jpg" required><br><br>
+			<input type="number" placeholder="46649856" name="dni"required><br><br>
 			<button type="submit" >Enviar</button>
 
 		</form>
