--- a/views/product.ejs
+++ b/views/product.ejs
@@ -49,11 +49,16 @@
 						<% } %>
 
 					</section>
-					
-					<form class="form" action="" method="get">
-						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
+					<% if(cookies.usuarioLogueado !== undefined || locals.userSession !== undefined){ %>
+					<form class="form" action="/producto/comentario/<%= producto.id %>" method="post">
+						<input class="form-input" type="text" value="" placeholder="Agregar comentario" name="comentario">
 						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
 					</form>
+					<%}else{%>
+						<p class="product-detail-description">
+                            Debe estar <a href="/usuario/login">logueado</a> para poder comentar
+                        </p>
+					<%}%>
 					<hr>
 				</div>
 			</div>
