--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,21 +7,23 @@
 	
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title"><%= producto.producto %> </h2> 
+			<h2 class="products-title"> <%= producto.producto %> </h2> 
 			<% if (cookies.usuarioLogueado !== undefined){ %>
-                <<% if (producto.usuario.email !== cookies.usuarioLogueado.id) { %>
+                <% if (producto.usuario.email !== cookies.usuarioLogueado.id) { %>
 					<p class="product-detail-description" > Publicado por: <a href="/usuario/profile/<%= producto.usuario.id %>"><%= producto.usuario.usuario %></a></p>
 				<% }%>
 				<% }%>
+				<% if (producto.id_user == cookies.usuarioLogueado.id) {%>
 				<form action="/producto/borradoProducto/<%= producto.id %>" method="post">
 		
 					<button type="submit">Borrar el producto</button>
-				</form>
-
-			<p class="product-detail-description">
+					<p class="product-detail-description">
 					
-				<a href="http://localhost:3000/producto/editProduct/<%= producto.id %>/<%=producto.id_user%>">Editar</a>
-			</p>
+						<a href="http://localhost:3000/producto/editProduct/<%= producto.id %>/<%=producto.id_user%>">Editar</a>
+					</p>
+				</form>
+				<% } %>
+			
 		</div>
 		<div class="product-detail">
 			<div class="row">
